--- a/.github/workflows/update-meme.yml
+++ b/.github/workflows/update-meme.yml
@@ -2,7 +2,7 @@ name: Update Meme in README
 
 on:
   schedule:
-    - cron: '0 */1 * * *' # Runs every 6 hours
+    - cron: '0 */1 * * *'  # Runs every 6 hours
 
 jobs:
   update-meme:
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }}  # Use the personal access token
 
       - name: Fetch Meme
         run: |
@@ -18,9 +20,11 @@ jobs:
           wget -O meme.jpg $(cat meme_url.txt)
 
       - name: Commit and Push Meme
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # Use the secret token
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add meme.jpg
           git commit -m "Updated meme"
-          git push
+          git push origin main
